--- a/index.html
+++ b/index.html
@@ -72,19 +72,18 @@
                             <img src="img/icon2.jpg" style="width:180px;height:180px;border-radius:180px;">
                             <h2 class="tm-site-name">Shiyue Zhang</h2>
                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-textbox-1-col">
-                                <p class="tm-text">Flat design used <a rel="nofollow"
-                                                                       href="https://codyhouse.co/gem/hero-slider/"
-                                                                       target="_blank">Hero Slider</a> for left and
-                                    right page transitions. Responsiveness is based on <a rel="nofollow"
-                                                                                          href="http://getbootstrap.com/"
-                                                                                          target="_blank">Bootstrap</a>
-                                    4 alpha 2. Images are taken from <a rel="nofollow" href="https://unsplash.com/"
-                                                                        target="_blank">Unsplash</a>. This web template
-                                    is provided by <a href="https://plus.google.com/+templatemo" target="_blank">templatemo</a>
-                                    for free of charge.</p>
-                                <p class="tm-text">Mauris eros lacus, sollicitudin sit amet lacinia et, vehicula
-                                    bibendum felis. Pellentesque in quam iaculis erat iaculis lacinia. Donec sagittis
-                                    sapien odio, a sodales velit elementum nec.</p>
+                                <p class="tm-text">
+                                    Hi, my name is Shiyue Zhang, a graduate student of Beijing University of Posts and
+                                    Telecommunications(BUPT), China. I got my B.E here too. My major is Communication Engineering but
+                                    my research interest is Natural Language Processing. And I'm working as a full-time
+                                    intern in <a href="http://cslt.riit.tsinghua.edu.cn/">CSLT</a>CSLT, Tsinghua University,
+                                    supervised by Prof. Dong Wang and Dr. Yang Feng.
+                                </p>
+                                <p class="tm-text">
+                                    I'm highly interested in NLP, especially in Neural Machine Translation. Recently, I'm focusing on
+                                    memory-augmented neural model. I believe memory can work as a complement to alleviate the disadvantage
+                                    of too generic neural model.
+                                </p>
                             </div>
                         </div>
 
