--- a/index.html
+++ b/index.html
@@ -69,20 +69,23 @@
                     <div class="row">
 
                         <div class="col-xs-12">
-                            <img src="img/icon2.jpg" style="width:180px;height:180px;border-radius:180px;">
+                            <img src="img/icon3.jpg" style="width:180px;height:180px;border-radius:180px;">
                             <h2 class="tm-site-name">Shiyue Zhang</h2>
                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-textbox-1-col">
                                 <p class="tm-text">
                                     Hi, my name is Shiyue Zhang, a graduate student of Beijing University of Posts and
                                     Telecommunications(BUPT), China. I got my B.E here too. My major is Communication Engineering but
                                     my research interest is Natural Language Processing. And I'm working as a full-time
-                                    intern in <a href="http://cslt.riit.tsinghua.edu.cn/">CSLT</a>CSLT, Tsinghua University,
+                                    intern in <a href="http://cslt.riit.tsinghua.edu.cn/">CSLT</a>, Tsinghua University,
                                     supervised by Prof. Dong Wang and Dr. Yang Feng.
                                 </p>
                                 <p class="tm-text">
-                                    I'm highly interested in NLP, especially in Neural Machine Translation. Recently, I'm focusing on
-                                    memory-augmented neural model. I believe memory can work as a complement to alleviate the disadvantage
-                                    of too generic neural model.
+                                    I'm highly interested in NLP. My first touch with NLP is a classic topic model(LDA), which I used in
+                                    personalized news recommendation. Now, I focus on deep learning in NLP, especially in
+                                    Neural Machine Translation. I'm working on memory-augmented neural models. I believe memory
+                                    can work as a complement to alleviate the disadvantage of too generic neural model.
+                                    Know more about me, please see my <a class="nav-link" href="#0" data-no="2">CV</a> and
+                                    detailed introduce of my <a class="nav-link" href="#0" data-no="3">work</a>.
                                 </p>
                             </div>
                         </div>
