--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="row">
 
                         <div class="col-xs-12">
-                            <img src="img/icon3.jpg" style="width:180px;height:180px;border-radius:180px;">
+                            <img src="img/yuer.jpg" style="width:180px;height:180px;border-radius:180px;">
                             <h2 class="tm-site-name">Shiyue Zhang</h2>
                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-textbox-1-col">
                                 <p class="tm-text">
