--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                         <a class="nav-link" href="#0" data-no="1">Intro <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="2">CV</a>
+                        <a class="nav-link" href="#1" data-no="2">CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="3">Work</a>
+                        <a class="nav-link" href="#2" data-no="3">Work</a>
                     </li>
                     <!--<li class="nav-item">-->
                     <!--<a class="nav-link" href="#0" data-no="4">Photos</a>-->
                     <!--</li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="5">Contact</a>
+                        <a class="nav-link" href="#5" data-no="5">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -73,19 +73,18 @@
                             <h2 class="tm-site-name">Shiyue Zhang</h2>
                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-textbox-1-col">
                                 <p class="tm-text">
-                                    Hi, my name is Shiyue Zhang, a graduate student of Beijing University of Posts and
-                                    Telecommunications(BUPT), China. I got my B.E here too. My major is Communication Engineering but
-                                    my research interest is Natural Language Processing. And I'm working as a full-time
-                                    intern in <a href="http://cslt.riit.tsinghua.edu.cn/">CSLT</a>, Tsinghua University,
-                                    supervised by Prof. Dong Wang and Dr. Yang Feng.
+                                    Hi, my name is Shiyue Zhang (the girl in picture above), a graduate student of Beijing
+                                    University of Posts and Telecommunications(BUPT), China. I got my B.E here too.
+                                    My major is Communication Engineering but my research interest is Natural Language Processing.
+                                    And I'm working as a full-time intern in <a href="http://cslt.riit.tsinghua.edu.cn/">CSLT</a>,
+                                    Tsinghua University, supervised by Prof. Dong Wang and Dr. Yang Feng.
                                 </p>
                                 <p class="tm-text">
                                     I'm highly interested in NLP. My first touch with NLP is a classic topic model(LDA), which I used in
                                     personalized news recommendation. Now, I focus on deep learning in NLP, especially in
                                     Neural Machine Translation. I'm working on memory-augmented neural models. I believe memory
                                     can work as a complement to alleviate the disadvantage of too generic neural model.
-                                    Know more about me, please see my <a class="nav-link" href="#0" data-no="2">CV</a> and
-                                    detailed introduce of my <a class="nav-link" href="#0" data-no="3">work</a>.
+                                    Know more about me, please see my CV and detailed introduce of my work.
                                 </p>
                             </div>
                         </div>
@@ -100,8 +99,8 @@
             <div class="cd-full-width">
 
                 <div class="container-fluid js-tm-page-content" data-page-no="2">
-                    <iframe class="page-icon preview-pane" frameborder="0" height="610" width="950"
-                            src="img/CV.pdf"></iframe>
+                    <iframe class="page-icon preview-pane" frameborder="0" height="800" width="800"
+                            src="img/CV.pdf#toolbar=0&scrollbar=0&navpanes=0"></iframe>
                 </div>
 
             </div> <!-- .cd-full-width -->
