--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                 <div class="container-fluid js-tm-page-content" data-page-no="2">
                     <iframe class="page-icon preview-pane" frameborder="0" height="800" width="800"
-                            src="img/CV.pdf#toolbar=0&scrollbar=0&navpanes=0"></iframe>
+                            src="img/CV.pdf"></iframe>
                 </div>
 
             </div> <!-- .cd-full-width -->
