adding LDA content

--- a/index.html
+++ b/index.html
@@ -150,8 +150,15 @@
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
                                      style="width: 450px; height: 300px;">
                                     <h2 class="tm-text-title">Topic model(LDA)</h2>
-                                    <p class="tm-text"></p>
-                                    <p class="tm-text"></p>
+                                    <p class="tm-text">
+                                        LDA(Latent Dirichlet Allocation) is a classic topic model, proposed by David M. Blei, AndrewY. Ng, Michael I. Jordan in 2003,
+                                        and has been widely used during past several years. I was interested in this model, so I carefully reviewed its derivation process
+                                        , Gibbs sampling and implemented a <a href="https://github.com/ZhangShiyue/LDA">LDA by python </a>.
+                                    </p>
+                                    <p class="tm-text">
+                                        When I worked as an intern at YOKA.com, I participated in designing a Personalized News Recommendation system and independently
+                                        implemented a 'LDA module'. See more information <a>here</a>.
+                                    </p>
                                 </div>
 
                             </div>
