--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
                             <div class="tm-2-col-container">
 
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 300px;">
+                                     style="width: 450px; height: 600px;">
                                     <h2 class="tm-text-title">Machine Translation</h2>
                                     <p class="tm-text"></p>
                                     <p class="tm-text"></p>
                                 </div>
 
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 300px;">
+                                     style="width: 450px; height: 600px;">
                                     <h2 class="tm-text-title">RNNG</h2>
                                     <p class="tm-text"></p>
                                     <p class="tm-text"></p>
@@ -141,18 +141,18 @@
 
                             <div class="tm-2-col-container">
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 300px;">
+                                     style="width: 450px; height: 600px;">
                                     <h2 class="tm-text-title">Wikipedia</h2>
                                     <p class="tm-text"></p>
                                     <p class="tm-text"></p>
                                 </div>
 
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 300px;">
+                                     style="width: 450px; height: 600px;">
                                     <h2 class="tm-text-title">Topic model(LDA)</h2>
                                     <p class="tm-text">
                                         LDA(Latent Dirichlet Allocation) is a classic topic model, proposed by David M. Blei, AndrewY. Ng, Michael I. Jordan in 2003,
-                                        and has been widely used during past several years. I was interested in this model, so I carefully reviewed its derivation process
+                                        and has been widely used during past several years. I was interested in this model, so carefully reviewed its derivation process
                                         , Gibbs sampling and implemented a <a href="https://github.com/ZhangShiyue/LDA">LDA by python </a>.
                                     </p>
                                     <p class="tm-text">
