--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-textbox-1-col">
                                 <p class="tm-text">
                                     Hi, my name is Shiyue Zhang (the girl in picture above), a graduate student of Beijing
-                                    University of Posts and Telecommunications(BUPT), China. I got my B.E here too.
+                                    University of Posts and Telecommunications(BUPT), China. I also got my B.E degree there.
                                     My major is Communication Engineering but my research interest is Natural Language Processing.
                                     And I'm working as a full-time intern in <a href="http://cslt.riit.tsinghua.edu.cn/">CSLT</a>,
                                     Tsinghua University, supervised by Prof. Dong Wang and Dr. Yang Feng.
@@ -99,8 +99,8 @@
             <div class="cd-full-width">
 
                 <div class="container-fluid js-tm-page-content" data-page-no="2">
-                    <iframe class="page-icon preview-pane" frameborder="0" height="800" width="800"
-                            src="img/CV.pdf"></iframe>
+                    <iframe class="page-icon preview-pane" frameborder="0" height="800" width="1200"
+                            src="img/CV.pdf#zoom=150%"></iframe>
                 </div>
 
             </div> <!-- .cd-full-width -->
@@ -119,14 +119,14 @@
                             <div class="tm-2-col-container">
 
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 600px;">
+                                     style="width: 600px; height: 400px;">
                                     <h2 class="tm-text-title">Machine Translation</h2>
                                     <p class="tm-text"></p>
                                     <p class="tm-text"></p>
                                 </div>
 
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 600px;">
+                                     style="width: 600px; height: 400px;">
                                     <h2 class="tm-text-title">RNNG</h2>
                                     <p class="tm-text"></p>
                                     <p class="tm-text"></p>
@@ -141,14 +141,14 @@
 
                             <div class="tm-2-col-container">
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 600px;">
+                                     style="width: 600px; height: 400px;">
                                     <h2 class="tm-text-title">Wikipedia</h2>
                                     <p class="tm-text"></p>
                                     <p class="tm-text"></p>
                                 </div>
 
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
-                                     style="width: 450px; height: 600px;">
+                                     style="width: 600px; height: 400px;">
                                     <h2 class="tm-text-title">Topic model(LDA)</h2>
                                     <p class="tm-text">
                                         LDA(Latent Dirichlet Allocation) is a classic topic model, proposed by David M. Blei, AndrewY. Ng, Michael I. Jordan in 2003,
