added lda content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Flat - Responsive HTML Template</title>
+    <title>Shiyue Zhang's site</title>
     <!-- load stylesheets -->
     <link rel="stylesheet" href="http://fonts.useso.com/css?family=Open+Sans:300,400">
     <!-- Google web font "Open Sans" -->
@@ -157,7 +157,7 @@
                                     </p>
                                     <p class="tm-text">
                                         When I worked as an intern at YOKA.com, I participated in designing a Personalized News Recommendation system and independently
-                                        implemented a 'LDA module'. See more information <a>here</a>.
+                                        implemented a 'LDA module'. See more information <a href="lda.html">here</a>.
                                     </p>
                                 </div>
 
