added wikipeida content

--- a/index.html
+++ b/index.html
@@ -143,8 +143,14 @@
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
                                      style="width: 600px; height: 400px;">
                                     <h2 class="tm-text-title">Wikipedia</h2>
-                                    <p class="tm-text"></p>
-                                    <p class="tm-text"></p>
+                                    <p class="tm-text">
+                                        Research on Wikipedia includes article quality assessment, user reputation evaluation, collaboration patterns, and so on.
+                                    </p>
+                                    <p class="tm-text">
+                                        I'm working on a project in BUPT. The main goal of this project is building up a wikipedia article quality assessment system, which is supposed
+                                        to be better than or comparative to previous method and released as a online service. I have tried feature engineering combined linear regression model
+                                        that got good performance. And I'm trying to introduce neural model to wikipedia article quality assessment. See more info <a href="wiki.html">here</a>.
+                                    </p>
                                 </div>
 
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
@@ -152,12 +158,12 @@
                                     <h2 class="tm-text-title">Topic model(LDA)</h2>
                                     <p class="tm-text">
                                         LDA(Latent Dirichlet Allocation) is a classic topic model, proposed by David M. Blei, AndrewY. Ng, Michael I. Jordan in 2003,
-                                        and has been widely used during past several years. I was interested in this model, so carefully reviewed its derivation process
+                                        and has been widely used during past several years. I was quite interested in this model, so I carefully reviewed its derivation process
                                         , Gibbs sampling and implemented a <a href="https://github.com/ZhangShiyue/LDA">LDA by python </a>.
                                     </p>
                                     <p class="tm-text">
                                         When I worked as an intern at YOKA.com, I participated in designing a Personalized News Recommendation system and independently
-                                        implemented a 'LDA module'. See more information <a href="lda.html">here</a>.
+                                        implemented a 'LDA module'. See more details <a href="lda.html">here</a>.
                                     </p>
                                 </div>
 
