added rnng content

--- a/index.html
+++ b/index.html
@@ -128,8 +128,12 @@
                                 <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox"
                                      style="width: 600px; height: 400px;">
                                     <h2 class="tm-text-title">RNNG</h2>
-                                    <p class="tm-text"></p>
-                                    <p class="tm-text"></p>
+                                    <p class="tm-text">
+                                        <a href="https://arxiv.org/pdf/1602.07776.pdf">RNNG</a> is Chris Dyer's paper in 2016, a transition-based parsing model
+                                        and its generative model can be seen as a language model. I have done some experiments based on this work since Oct. 2016.
+                                        Our basic idea is to add a memory component to original structure, which memorizes wrong instances of RNNG and is supposed to work as
+                                        a complement. But, our idea didn't work well and this work was halted by the end of 2016. See more info <a>here</a>.
+                                    </p>
                                 </div>
 
                             </div>
