--- a/rnng.html
+++ b/rnng.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Topic model(LDA)</title>
+    <title>RNNG</title>
      <link rel="stylesheet" href="css/templatemo-style.css">
 </head>
 <body>
