update photo and paper

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         },	
 	    {
             url: 'https://arxiv.org/abs/1706.08683',
-            title: 'Memory-augmented Chinese-Uyghur Neural Machine Translation"',
+            title: 'Memory-augmented Chinese-Uyghur Neural Machine Translation',
             authers: ['Shiyue Zhang', 'Gulnigar Mahmut', 'Dong Wang', 'Askar Hamdulla'],
             pub: 'APSIPA ASC ',
             time: '2017'
@@ -216,6 +216,13 @@
             authers: ['Aodong Li', 'Shiyue Zhang', 'Dong Wang', 'Thomas Fang Zheng'],
             pub: 'APSIPA ASC ',
             time: '2017'
+        },
+        {
+            url: '',
+            title: 'History-based Article Quality Assessment on Wikipedia',
+            authers: ['Shiyue Zhang', 'Zheng Hu', 'Chunhong Zhang'],
+            pub: 'Bigcomp ',
+            time: '2018'
         },
         {
             url: 'https://arxiv.org/abs/1705.03773',
