--- a/index.html
+++ b/index.html
@@ -344,10 +344,7 @@
 last updated: 3/11/2017
 
 <ul>
-
-    <a href="http://s11.flagcounter.com/more/6Ll"><img
-            src="http://s11.flagcounter.com/count2/6Ll/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
-            alt="Flag Counter" border="0"></a>
+    <a href="https://info.flagcounter.com/3P4w"><img src="https://s11.flagcounter.com/count2/3P4w/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 </ul>
 
 <script>
