--- a/index.html
+++ b/index.html
@@ -227,6 +227,13 @@
             time: '2017'
         },
         {
+            url: 'https://arxiv.org/abs/1711.04329',
+            title: 'Medical Diagnosis From Laboratory Tests by Combining Generative and Discriminative Learning',
+            authers: ['Shiyue Zhang', 'Pengtao Xie', 'Dong Wang', 'Eric P. Xing'],
+            pub: 'arXiv',
+            time: '2017'
+        },
+        {
             url: '',
             title: 'History-based Article Quality Assessment on Wikipedia',
             authers: ['Shiyue Zhang', 'Zheng Hu', 'Chunhong Zhang'],
@@ -341,7 +348,7 @@
 </ul>
 
 
-last updated: 3/11/2017
+last updated: 15/11/2017
 
 <ul>
     <a href="https://info.flagcounter.com/3P4w"><img src="https://s11.flagcounter.com/count2/3P4w/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
