--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <p>
     I'm a master student in Bejing University of Posts and Telecommunications, working on Wikipedia Quality Assessment supervised by Prof. Zheng Hu. <br>
     I'm also an intern in Tsinghua University, working on Machine Translation supervised by <a href="http://wangd.cslt.org/">Prof. Dong Wang</a> and Dr. Yang Feng. <br>
-    I'm going to apply PhD this year. My <a href="img/CV.pdf">CV</a>.
+    I'm going to apply PhD this year. My <a href="img/ShiyueZhang_CV.pdf">CV</a>.
 </p>
 
 <hr>
