--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <p>
     I'm a master student in Bejing University of Posts and Telecommunications, working on Wikipedia Quality Assessment supervised by Prof. Zheng Hu. <br>
     I'm also an intern in Tsinghua University, working on Machine Translation supervised by <a href="http://wangd.cslt.org/">Prof. Dong Wang</a> and Dr. Yang Feng. <br>
-    I'm going to apply PhD this year. My <a href="img/ShiyueZhang_CV.pdf">CV</a>.
+    I'm going to apply PhD this year. My <a href="files/ShiyueZhang_CV.pdf">CV</a>.
 </p>
 
 <hr>
@@ -297,7 +297,8 @@
 <a name="talks" class="disabled"><h3> Talks </h3></a>
 
 <ul>
-    <li><b>Presenting paper: Flexible and Creative Chinese Poetry Generation Using Neural Memory</b>, ACL, Vancouver, Canada</li>
+    <li><b><a href="files/Memory-augmented Neural Machine Translation.pptx"> Presenting paper: Memory-augmented Chinese-Uyghur Neural Machine Translation </a></b>, APSIPA 2017, Kuala Lumpur, Malaysia</li>
+    <li><b>Presenting paper: Flexible and Creative Chinese Poetry Generation Using Neural Memory</b>, ACL 2017, Vancouver, Canada</li>
     <li><b><a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/images/f/f3/Conv_seq2seq.pptx" target="_blank">Paper Sharing: Attention Is All You Need
     </a>, CSLT, Tsinghua University, Beijing, China, 06/21/2017 </b></li>
     <li><b><a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/images/3/36/Memory-augmented_Neural_Machine_Translation_.pptx" target="_blank">Memory-augmented Neural Machine Translation
