--- a/index.html
+++ b/index.html
@@ -164,15 +164,16 @@
 </table>
 
 <p>
-    I'm a master student in Bejing University of Posts and Telecommunications, working on Wikipedia Quality Assessment supervised by Prof. Zheng Hu. <br>
-    I'm also an intern in Tsinghua University, working on Machine Translation supervised by <a href="http://wangd.cslt.org/">Prof. Dong Wang</a> and Dr. Yang Feng. <br>
+    I'm a master student at Bejing University of Posts and Telecommunications. <br>
+    I'm an Research Assistant at Tsinghua University, working on Machine Translation supervised by <a href="http://wangd.cslt.org/">Prof. Dong Wang</a>. <br>
     I'm going to apply PhD this year. My <a href="files/ShiyueZhang_CV.pdf">CV</a>.
 </p>
 
 <hr>
 <a name="research" class="disabled"><h2> Research Interest </h2></a>
 <ul>
-    <li>Natural Language Processing: Machine Translation</li>
+    <li>Natural Language Processing</li>
+    <li>Machine Learning</li>
 </ul>
 
 <hr>
@@ -287,6 +288,7 @@
 <a name="code" class="disabled"><h2> Code </h2></a>
 
 <ul>
+    <li><b><a href="https://github.com/CSLT-THU/ViVi_Translation">ViVi_Translation: Source code for Memory-augmented NMT on Chinese-Uyghur</a></b><br>
     <li><b><a href="https://github.com/CSLT-THU/CSLT_NMT">ViVi_NMT: An Open Source Toolkit for Neural Machine Translation</a></b><br>
 </ul>
 
