--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 <table cellpadding="20" style="font-size: 18px">
     <tr>
-        <td><a href="img/yuer.jpg"><img src='img/yuer.jpg' alt="Shiyue Zhang" width="230" height="295"></a></td>
+        <td><a href="img/yuer2.jpg"><img src='img/yuer2.jpg' alt="Shiyue Zhang" width="200" height="270"></a></td>
         <td>
             <h1> 张诗悦 </h1>
             <p><font size="+2"><b>Shiyue Zhang</b></font></p>
@@ -152,7 +152,7 @@
                 <br>
                 <b>Email</b>: </font> byryuer@gmail.com <br>
                 <a href="#research">[Research Interest]</a> <a href="#education">[Education]</a> <a href="#publications">[Publications]</a>
-                <a href="#code">[Code]</a>
+                <a href="#code">[Code]</a> <a href="#software">[Software]</a>
                 <a href="#academic activities">[Academic Activities]</a> <a href="#myself">[Myself]</a> <br>
             </p>
         </td>
@@ -165,8 +165,8 @@
 
 <p>
     I'm a master student at Bejing University of Posts and Telecommunications. <br>
-    I'm an Research Assistant at Tsinghua University, working on Machine Translation supervised by <a href="http://wangd.cslt.org/">Prof. Dong Wang</a>. <br>
-    I'm going to apply PhD this year. My <a href="files/ShiyueZhang_CV.pdf">CV</a>.
+    As the same time, I'm working as a Research Assistant at Tsinghua University, supervised by <a href="http://wangd.cslt.org/">Prof. Dong Wang</a>. <br>
+    Here is my <a href="files/ShiyueZhang_CV.pdf">CV</a>.
 </p>
 
 <hr>
@@ -180,10 +180,7 @@
 <a name="education" class="disabled"><h2> Education </h2></a>
 <ul>
     <li> 2015.9 - Present: Master Student, Bejing University of Posts and Telecommunications, China</li>
-</ul>
-
-<ul>
-    <li> 2011.9 - 2015.7: received the B.Sc.degree in Bejing University of Posts and Telecommunications, China</li>
+    <li> 2011.9 - 2015.7: received the B.E.degree in Bejing University of Posts and Telecommunications, China</li>
 </ul>
 
 <hr>
@@ -292,9 +289,27 @@
     <li><b><a href="https://github.com/CSLT-THU/CSLT_NMT">ViVi_NMT: An Open Source Toolkit for Neural Machine Translation</a></b><br>
 </ul>
 
+<hr>
+<a name="software" class="disabled"><h2> Software </h2></a>
+
+<ul>
+    <li>A wechat miniprogram: 薇你写诗, which is based on an AI poet: 薇薇. <br>
+        She will write a Chinese poem for you based on your name, age and gender.<br>
+        Scan the QR code below to have a try: <br>
+    </li>
+    <a href="img/vivi.jpg"><img src='img/vivi.jpg' width="150" height="150"></a>
+
+</ul>
 
 <hr>
 <a name="academic activities" class="disabled"><h2> Academic Activities </h2></a>
+
+<a name="news" class="disabled"><h3> News </h3></a>
+<ul>
+    <li>Admitted by UNC, 2018.02.16 </li>
+    <li>Admitted by UMD, 2018.02.06 </li>
+    <li>Admitted by UMass Amherst, 2018.01.24 </li>
+</ul>
 
 <a name="talks" class="disabled"><h3> Talks </h3></a>
 
