--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 <a name="software" class="disabled"><h2> Software </h2></a>
 
 <ul>
-    <li>A wechat miniprogram: 薇你写诗, which is based on an AI poet: 薇薇. <br>
+    <li>A wechat miniprogram: 薇你写诗, which is based on an AI poet: 薇薇. @copyright from <a href="http://cslt.riit.tsinghua.edu.cn/">CSLT, THU</a>.<br>
         She will write a Chinese poem for you based on your name, age and gender.<br>
         Scan the QR code below to have a try: <br>
     </li>
