--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
 
 <a name="news" class="disabled"><h3> News </h3></a>
 <ul>
-    <li>Admitted by UNC, 2018.02.16 </li>
-    <li>Admitted by UMD, 2018.02.06 </li>
-    <li>Admitted by UMass Amherst, 2018.01.24 </li>
+    <li>Admitted by CS PHD at UNC, 2018.02.16 </li>
+    <li>Admitted by CS PHD at UMD, 2018.02.06 </li>
+    <li>Admitted by CS PHD at UMass Amherst, 2018.01.24 </li>
 </ul>
 
 <a name="talks" class="disabled"><h3> Talks </h3></a>
