--- a/index.html
+++ b/index.html
@@ -164,23 +164,23 @@
 </table>
 
 <p>
-    I'm a master student at Bejing University of Posts and Telecommunications. <br>
-    As the same time, I'm working as a Research Assistant at Tsinghua University, supervised by <a href="http://wangd.cslt.org/">Prof. Dong Wang</a>. <br>
+    I'm a first-year phd student at University of North Carolina at Chapel Hill, advised by <a href="http://www.cs.unc.edu/~mbansal/">Prof. Mohit Bansal</a>. <br>
+    Before joining UNC-CH, I got master and bachelor degrees from Beijing University of Posts and Telecommunications, and I also worked closely with <a href="http://166.111.134.19:8081/wangd/">Prof. Dong Wang</a> in Tsinghua University. <br>
     Here is my <a href="files/ShiyueZhang_CV.pdf">CV</a>.
 </p>
 
 <hr>
 <a name="research" class="disabled"><h2> Research Interest </h2></a>
 <ul>
-    <li>Natural Language Processing</li>
-    <li>Machine Learning</li>
+    <li>I have a general interest in Natural Language Processing, and now I'm working on Reading Comprehension.</li>
 </ul>
 
 <hr>
 <a name="education" class="disabled"><h2> Education </h2></a>
 <ul>
-    <li> 2015.9 - Present: Master Student, Bejing University of Posts and Telecommunications, China</li>
-    <li> 2011.9 - 2015.7: received the B.E.degree in Bejing University of Posts and Telecommunications, China</li>
+    <li> 2018.9 - Present: PhD Student, University of North Carolina at Chapel Hill, US</li>
+    <li> 2015.9 - 2018.3: received a M.E. Degree, Bejing University of Posts and Telecommunications, China</li>
+    <li> 2011.9 - 2015.7: received a B.E. degree, Bejing University of Posts and Telecommunications, China</li>
 </ul>
 
 <hr>
@@ -196,6 +196,20 @@
 </div>
 <script>
     var publications = [
+        {
+            url: 'https://arxiv.org/abs/1711.04329',
+            title: 'VV-Couplet: An open source Chinese couplet generation system',
+            authers: ['Jiyuan Zhang', 'Zheling Zhang', 'Shiyue Zhang', 'Dong Wang'],
+            pub: 'APSIPA ASC ',
+            time: '2018'
+        },
+        {
+            url: 'https://arxiv.org/abs/1711.04329',
+            title: 'Medical Diagnosis From Laboratory Tests by Combining Generative and Discriminative Learning',
+            authers: ['Shiyue Zhang', 'Pengtao Xie', 'Dong Wang', 'Eric P. Xing'],
+            pub: 'arXiv ',
+            time: '2017'
+        },
 	    {
             url: 'https://arxiv.org/abs/1708.02005',
             title: 'Memory-augmented Neural Machine Translation',
@@ -222,13 +236,6 @@
             title: 'Flexible and Creative Chinese Poetry Generation Using Neural Memory',
             authers: ['Jiyuan Zhang', 'Yang Feng', 'Dong Wang', 'Yang Wang', 'Andrew Abel', 'Shiyue Zhang', 'Andi Zhang'],
             pub: 'ACL ',
-            time: '2017'
-        },
-        {
-            url: 'https://arxiv.org/abs/1711.04329',
-            title: 'Medical Diagnosis From Laboratory Tests by Combining Generative and Discriminative Learning',
-            authers: ['Shiyue Zhang', 'Pengtao Xie', 'Dong Wang', 'Eric P. Xing'],
-            pub: 'arXiv',
             time: '2017'
         }
     ];
@@ -306,7 +313,8 @@
 
 <a name="news" class="disabled"><h3> News </h3></a>
 <ul>
-    <li>Offered by CS PHD at UNC, 2018.02.16 </li>
+    <li>Joined UNC-CH as a new phd studet, 2018.08.16</li>
+    <li>Offered by CS PHD at UNC-CH, 2018.02.16 </li>
     <li>Offered by CS PHD at UMD, 2018.02.06 </li>
     <li>Offered by CS PHD at UMass Amherst, 2018.01.24 </li>
 </ul>
@@ -316,11 +324,11 @@
 <ul>
     <li><b><a href="files/Memory-augmented Neural Machine Translation.pptx"> Presenting paper: Memory-augmented Chinese-Uyghur Neural Machine Translation </a></b>, APSIPA 2017, Kuala Lumpur, Malaysia</li>
     <li><b>Presenting paper: Flexible and Creative Chinese Poetry Generation Using Neural Memory</b>, ACL 2017, Vancouver, Canada</li>
-    <li><b><a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/images/f/f3/Conv_seq2seq.pptx" target="_blank">Paper Sharing: Attention Is All You Need
+    <li><b><a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/images/6/68/Attention_is_all_you_need.pptx" target="_blank">Paper Sharing: Attention Is All You Need
     </a>, CSLT, Tsinghua University, Beijing, China, 06/21/2017 </b></li>
     <li><b><a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/images/3/36/Memory-augmented_Neural_Machine_Translation_.pptx" target="_blank">Memory-augmented Neural Machine Translation
     </a>, CSLT, Tsinghua University, Beijing, China, 06/12/2017 </b></li>
-    <li><b><a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/images/6/68/Attention_is_all_you_need.pptx" target="_blank">Paper Sharing: Convolutional Sequence to Sequence Learning
+    <li><b><a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/images/f/f3/Conv_seq2seq.pptx" target="_blank">Paper Sharing: Convolutional Sequence to Sequence Learning
     </a>, CSLT, Tsinghua University, Beijing, China, 06/08/2017 </b></li>
 </ul>
 
@@ -359,7 +367,7 @@
 </ul>
 
 
-last updated: 2018/03/05
+last updated: 2018/08/30
 
 <ul>
     <a href="https://info.flagcounter.com/3P4w"><img src="https://s11.flagcounter.com/count2/3P4w/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
